--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">FinalCaseStudy</string>
+    <string-array name="menu_items">
+        <item>Home</item>
+        <item>Report Item</item>
+        <item>Found Items</item>
+        <item>Profile</item>
+        <item>Logout</item>
+    </string-array>
 </resources>
