strings.xml edit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,12 @@
         <item>Others</item>
     </string-array>
 
+    <string-array name="campus">
+        <item>Abucay Campus</item>
+        <item>Bagac Campus</item>
+        <item>Balanga Campus</item>
+        <item>Dinalupihan Campus</item>
+        <item>Main Campus</item>
+        <item>Orani Campus</item>
+    </string-array>
 </resources>
