--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     </string-array>
 
     <string-array name="campus">
+        <item>BPSU Campus</item>
         <item>Abucay Campus</item>
         <item>Bagac Campus</item>
         <item>Balanga Campus</item>
